自定义路由

--- a/笔记/01.md
+++ b/笔记/01.md
@@ -204,7 +204,37 @@ ASP.Net MVC路由处理过程：
 
 ## 定义URL和Controller之间的映射规则
 
+ASP.Net MVC路由会使用中间件`app.UseMvcWithDefaultRoute()`，映射默认路由：
+
+![image-20220829233017113](assets/image-20220829233017113.png)
 
 
 
+怎么看下来ASP.Net MVC路由好简单啊，但是为什么？
 
+其实实现这个路由很复杂，先来看下如果要映射这个路由，该如何写代码。
+
+![image-20220829233142814](assets/image-20220829233142814.png)
+
+## 两种路由映射模式
+
+- 传统路由（使用路由表）Conventional routing
+- 特性注释路由 Attribute routing
+
+这两种模式可以互相兼容，互相嵌套。
+
+**Conventional routing**
+
+![image-20220829233351115](assets/image-20220829233351115.png)
+
+**Attribute routing**
+
+![image-20220829233416485](assets/image-20220829233416485.png)
+
+
+
+自定义路由
+
+![image-20220829234816959](assets/image-20220829234816959.png)
+
+等号后面接着的home，index代表打开的页面控制器为home控制器，使用的是index，而id后面跟着一个问号表示该参数是可选的。
