--- a/笔记/01.md
+++ b/笔记/01.md
@@ -389,7 +389,7 @@ namespace LanZhouBeefNoodles.Models
 
 ## Entity Framework Core 2022.08.31
 
-特点：
+**特点：**
 
 1. 跨平台
 2. 建模
@@ -399,7 +399,7 @@ namespace LanZhouBeefNoodles.Models
 6. 缓存
 7. 数据迁移
 
-EF的组件（红色部分）：
+**EF的组件（红色部分）**：
 
 ![image-20220831211507828](assets/image-20220831211507828.png)
 
