--- a/笔记/01.md
+++ b/笔记/01.md
@@ -403,11 +403,100 @@ namespace LanZhouBeefNoodles.Models
 
 ![image-20220831211507828](assets/image-20220831211507828.png)
 
+### 创建和修改数据模型
 
+无论是创建还是修改，都需要安装好拓展包：
 
+![image-20220903200803234](assets/image-20220903200803234.png)
 
+#### 创建
 
+**step1** build项目
 
+**step2** 在程序包管理器控制台输入：`add-migration {描述}` ，创建好之后，文件目录将新增如下文件夹和文件
 
+![image-20220903200946543](assets/image-20220903200946543.png)
 
+**step3** 程序包管理器控制台输入 `update-datebase`
+
+**step4** 向数据库录入初始化数据。在models文件夹中新增 DbInitializer.cs 文件
+
+```c#
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace LanZhouBeefNoodles.Models
+{
+    public static class DbInitializer
+    {
+        public static void Seed(AppDbContext context)
+        {
+            if (context.Noodles.Any())
+            {
+                return;
+            }
+            context.AddRange
+                (
+                new Noodle { Name = "毛细", Price = 12, ShortDescription = "如发丝般细", LongDescription = "真的好细好细好细啊", ImageUrl = "/images/毛细.png" },
+                new Noodle { Name = "细", Price = 10, ShortDescription = "普通细", LongDescription = "还是挺细的", ImageUrl = "/images/细.png" },
+                new Noodle { Name = "三细", Price = 11, ShortDescription = "有点粗了", LongDescription = "比细的粗点，比二细细点", ImageUrl = "/images/三细.png" },
+                new Noodle { Name = "二细", Price = 10, ShortDescription = "粗了", LongDescription = "粗的才有嚼劲", ImageUrl = "/images/二细.png" },
+                new Noodle { Name = "二柱子", Price = 11, ShortDescription = "太粗了", LongDescription = "粗得快咬不动了", ImageUrl = "/images/二柱子.png" },
+                new Noodle { Name = "韭叶子", Price = 12, ShortDescription = "扁的", LongDescription = "韭猜叶一样宽", ImageUrl = "/images/韭叶子.png" },
+                new Noodle { Name = "薄宽", Price = 11, ShortDescription = "开始宽了", LongDescription = "比韭叶宽一点，比大宽窄一点", ImageUrl = "/images/薄宽.png" },
+                new Noodle { Name = "大宽", Price = 10, ShortDescription = "裤带面", LongDescription = "比嘴还宽了", ImageUrl = "/images/大宽.png" },
+                new Noodle { Name = "荞麦棱子", Price = 15, ShortDescription = "立方体的", LongDescription = "好像知道师傅怎么拉出来的", ImageUrl = "/images/荞麦棱子.png" },
+                new Noodle { Name = "一窝丝", Price = 15, ShortDescription = "这是啥", LongDescription = "我也没吃过", ImageUrl = "/images/一窝丝.png" }
+                );
+            context.SaveChanges();
+        }
+    }
+}
+
+```
+
+**step5** 修改启动函数，在重新启动前检测是否有初始化数据，如果没有则录入初始化数据。
+
+```c#
+        public static void Main(string[] args)
+        {
+            //CreateHostBuilder(args).Build().Run();
+
+            var host = CreateHostBuilder(args).Build();
+            using (var scope = host.Services.CreateScope())
+            {
+                var services = scope.ServiceProvider;
+                try
+                {
+                    var context = services.GetRequiredService<AppDbContext>();
+                    DbInitializer.Seed(context);
+                }
+                catch (Exception)
+                {
+                    //故意留空，以后可以添加日志
+                }
+            }
+            host.Run();
+        }
+```
+
+**step6** 运行项目即可。
+
+#### 更新
+
+**step1** 在模型中更新字段
+
+**step2** 在程序包管理器控制台输入：`add-migration {描述}`
+
+**step3** 程序包管理器控制台输入 `update-datebase`
+
+## 视图 2022.09.03
+
+Views文件夹和视图模板文件设置
+
+视图的种类与基本操作
+
+视图的页面美化
 
